changed about me

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ permalink: /blog/:title
 
 
 # My variables
-name: HiCodin
+name: Code and Whatnot
 description: code and whatnot
 google_verification: null
 
